--- a/.github/workflows/GoTestAndBuild.yml
+++ b/.github/workflows/GoTestAndBuild.yml
@@ -19,9 +19,9 @@ jobs:
         go-version: '1.23.6'
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v ./backend/test/...
       
     - name: Build
-      run: go build -v ./...
+      run: go build -v ./backend/.
 
 
