--- a/.github/workflows/GoTestAndBuild.yml
+++ b/.github/workflows/GoTestAndBuild.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: '1.23.6'
 
     - name: Test
-      run: go test -v ./backend/test/...
+      run: go test -v ./backend/...
       
     - name: Build
       run: go build -v ./backend/.
