--- a/.github/workflows/GoTestAndBuild.yml
+++ b/.github/workflows/GoTestAndBuild.yml
@@ -7,21 +7,29 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.23.6'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.23.6'
 
-    - name: Test
-      run: go test -v ./backend/...
-      
-    - name: Build
-      run: go build -v ./backend/.
+      # Run go mod tidy in the backend/ directory
+      - name: Install Dependencies
+        working-directory: ./backend
+        run: go mod tidy
 
+      # Run tests in the backend/ directory
+      - name: Run Tests
+        working-directory: ./backend
+        run: go test -v ./...
 
+      # Build the Go binary from backend/main.go
+      - name: Build
+        working-directory: ./backend
+        run: go build .
