--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,12 +6,12 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.6.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +36,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+    "overrides": {
+        "svgo": {
+            "nth-check": "2.1.1"
+        },
+        "resolve-url-loader": {
+            "postcss": "8.5.3"
+        },
+        "rollup-plugin-terser": {
+            "serialize-javascript": "6.0.2"
+        }
+    }
 }
