--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 node_modules/
 frontend/node_modules/
+package-lock.json
+frontend/package-lock.json
 
+*.mod
+*.sum
 backend/go.mod
 backend/go.sum
 *.exe
