--- a/.github/workflows/GoTestAndBuild.yml
+++ b/.github/workflows/GoTestAndBuild.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.23.6'
+          cache: true
+          cache-dependency-path: ./backend/go.sum
 
       # Run go mod tidy in the backend/ directory
       - name: Install Dependencies
