--- a/.github/workflows/GoTestAndBuild.yml
+++ b/.github/workflows/GoTestAndBuild.yml
@@ -19,19 +19,17 @@ jobs:
         with:
           go-version: '1.23.6'
           cache: true
-          cache-dependency-path: ./backend/go.sum
+          working-directory: ./backend
+          cache-dependency-path: go.sum
 
-      # Run go mod tidy in the backend/ directory
       - name: Install Dependencies
         working-directory: ./backend
         run: go mod tidy
 
-      # Run tests in the backend/ directory
       - name: Run Tests
         working-directory: ./backend
         run: go test -v ./...
 
-      # Build the Go binary from backend/main.go
       - name: Build
         working-directory: ./backend
         run: go build .
