--- a/.github/workflows/GoTestAndBuild.yml
+++ b/.github/workflows/GoTestAndBuild.yml
@@ -19,8 +19,7 @@ jobs:
         with:
           go-version: '1.23.6'
           cache: true
-          working-directory: ./backend
-          cache-dependency-path: go.sum
+          cache-dependency-path: ./backend/go.sum
 
       - name: Install Dependencies
         working-directory: ./backend
