--- a/.github/workflows/GoTestAndBuild.yml
+++ b/.github/workflows/GoTestAndBuild.yml
@@ -30,5 +30,5 @@ jobs:
         run: go test -v ./...
 
       - name: Build
-        working-directory: ./backend
+        working-directory: ./backend/src
         run: go build .
