--- a/backend/.env
+++ b/backend/.env
@@ -3,6 +3,13 @@ POSTGRES_DSN=host=localhost user=postgres password=postgres dbname=lms port=5432
 
 # JWT secret key (choose a strong secret key)
 JWT_SECRET=IAE3s64n1A9AWo9nCWiZbbCS7WP360da9hhw5XqXnMY=
+TOKEN_EXPIRY_HOURS=24
 
 # Server port (optional, defaults to 5000 if not set)
 PORT=5000
+
+APP_ENV="development"
+
+TEST_POSTGRES_DSN="host=localhost user=your_test_user password=your_test_password dbname=libms_test port=5432 sslmode=disable"
+
+LOG_LEVEL="debug"
