--- a/.github/workflows/GoTestAndBuild.yml
+++ b/.github/workflows/GoTestAndBuild.yml
@@ -11,10 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out code
+      - name: Check out code and Go Setup
         uses: actions/checkout@v4
-
-      - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: '1.23.6'
